# ChangeLog for dev-python/meld3
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/meld3/ChangeLog,v 1.13 2014/03/31 21:03:45 mgorny Exp $

  31 Mar 2014; Michał Górny <mgorny@gentoo.org> meld3-0.6.9-r1.ebuild:
  Add support for the new PyPy slotting.

  05 Sep 2013; Michał Górny <mgorny@gentoo.org> meld3-0.6.10-r1.ebuild,
  meld3-0.6.9-r1.ebuild:
  Clean up PYTHON_COMPAT from old implementations.

*meld3-0.6.9-r1 (19 Jul 2013)

  19 Jul 2013; Ian Delaney <idella4@gentoo.org> +meld3-0.6.9-r1.ebuild,
  -meld3-0.6.9.ebuild:
  migrate -> distutils-r1, rm 'distutils' ebuild of that version

*meld3-0.6.10-r1 (05 Jun 2013)

  05 Jun 2013; Tiziano Müller <dev-zero@gentoo.org> +meld3-0.6.10-r1.ebuild:
  Revision bump while porting to distutils-r1

*meld3-0.6.10 (11 Jan 2013)

  11 Jan 2013; Patrick Lauer <patrick@gentoo.org> +meld3-0.6.10.ebuild:
  Bump for 451240

  29 Sep 2012; Tim Harder <radhermit@gentoo.org> meld3-0.6.7.ebuild,
  meld3-0.6.8.ebuild, meld3-0.6.9.ebuild:
  Add github homepage.

*meld3-0.6.9 (29 Sep 2012)

  29 Sep 2012; Tim Harder <radhermit@gentoo.org> +meld3-0.6.9.ebuild:
  Version bump.

  12 Sep 2012; Kacper Kowalik <xarthisius@gentoo.org> +files/meld3_tests.patch,
  meld3-0.6.8.ebuild:
  Apply upstream patch to fix test failures with Python2.7. Thanks to Ian
  Delaney <johneed@hotmail.com> for reporting issue upstream. Fixes bug 429412
  by Diego Elio Pettenò <flameeyes@gentoo.org>

*meld3-0.6.8 (29 Mar 2012)

  29 Mar 2012; Dirkjan Ochtman <djc@gentoo.org> +meld3-0.6.8.ebuild:
  Version bump to 0.6.8.

  12 Feb 2012; Dirkjan Ochtman <djc@gentoo.org> metadata.xml:
  Removing myself as a maintainer.

  22 Sep 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  -meld3-0.6.6.ebuild:
  Delete.

*meld3-0.6.7 (13 Sep 2010)

  13 Sep 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  +meld3-0.6.7.ebuild:
  Version bump.

*meld3-0.6.6 (04 Mar 2010)
