@@ -6,29 +6,19 @@ DIST meld3-0.6.10.tar.gz 41408 SHA256 6642f2444f3527a9338104edc2d1b420ba5a770b57
 DIST meld3-0.6.7.tar.gz 36765 SHA256 851de91432341ca6434b04977a9b8c61e3450541e2906bf9bf22478328f9a24a SHA512 adf0ef0dce7dbac696a0bbc9d9670ed7f45cb1ec5796e568bef51dba12c7deb498fadce8efbb709fedf3dc5e747be6a2eb9ba89a10bda4b98942004ce1787ed1 WHIRLPOOL 0c65f7cde8d19efef06782a929cf894d6363042c3974bb9619fdbb1074dbb0e4ec156318a37b7893719f043881775156ab0f796b4e5d60d953a75fb6b9e6303a
 DIST meld3-0.6.8.tar.gz 40612 SHA256 a425e9a9e0d9e3d69a2f5c1451d582f1222a7be94a957ca1e5301fd4045b5dbe SHA512 79800d4b718d98edb881f291bc13347c3a3e4fa0df037c5deafc729824080bca059ff314e7e0685ac6e30d52b6bdced574dc93b4d0c36c4fa432ecaf0be66636 WHIRLPOOL 0ff160dc95b412b37d8e1ce9e40ce5a43ea3cf7aa218accea067dfc6a0b5ccbd9374a574323aa1203a59d88a87d9e30dac9de8e7593224e1a6ac7f7a30c473ed
 DIST meld3-0.6.9.tar.gz 40945 SHA256 79aea88005ecfc03e6e46d3e5548c81e985560863a982264b0d51bd5b493893e SHA512 e4382e47ab32059337eb128d22b00d061be048d383f93fe57785196e87ded4c028a9f68e479a20ef8371a8a3c43d32baafb3086305b937d6f3a367b39ca076a3 WHIRLPOOL 1f7f860d09737ecd5e95b00940dfca8decbcbd351840e4a43cd3ac59c1c8500326b8f5d2fed59dbc94e790321528f3b5c4b7928680ad9448ff733c70dd3df942
+DIST meld3-1.0.0.tar.gz 36232 SHA256 57b41eebbb5a82d4a928608962616442e239ec6d611fe6f46343e765e36f0b2b SHA512 17d90620b34ddecebcf1d08698149a598f1ac74f3a9c8c5fadcc2ea70d3d94c19ac3d662904f29a5093b3326131a2875940f3fa63a05f288de8e703cfee6e243 WHIRLPOOL f2b23c652757df094d3dc1e5b75b2f1e398c569201559e89cee098d1021b45227326667e510a442e2016d3c3651ce5c78e7e075720f58342f34df0bec6182565
 EBUILD meld3-0.6.10-r1.ebuild 669 SHA256 c8a4d6f1afee63fa5e29b479bef8265ac9c06383b10f04611cbe8a638edeba3a SHA512 9880faaad9078b54207afb41ed9788b1a0ac5533c839895114b37d4d4ec3c889224f659fa0db6059fa18813d8beb514b613a5b7ca61d4f48638cbf185e2a37f4 WHIRLPOOL 74e2a085b64274e77e1f5e27eb6ddaf0d057b5efa542745ebda3856d5d3e9f8dd4c18a8dde3efbda39e0587e53b757d9bf8e7748d0a01919f785807caabb6c95
 EBUILD meld3-0.6.10.ebuild 736 SHA256 09111056a18dd063da2571c89763900ebea7aa1309fc9695a4f417b30b8cf352 SHA512 7f6983fa5c68d424203884f2a943bd80d26a659a0d732b56020c92e5883439590a4def9f7ffd22b551458c2aae51c49b0e1701863d0f35a1ccdbd561d11f9e23 WHIRLPOOL 897e65359f752a62fd5bd59f508bcb65e70ecd60346a160665996c0f622ba7f1585a18f11d63ecfeec23c4c64dc3ebf109a7b4178b06707bf3c654e05e8fbecf
 EBUILD meld3-0.6.7.ebuild 752 SHA256 dc729674517a9df0af3d0186bb1a65707db02ad2df9912cdbf7e27bf4c30d09a SHA512 12c03b9f2b14432cbd8fd3336a9235ec02d16c0e3b98972ef9d49107d378d9c53d08b670046110a6e010f771cb9a9bfe4e4990197d44f09ff334dde03c63e940 WHIRLPOOL 88b75466029ddaf26a3c1877679af2f7d4f03a83a003ced879762aec0b32d5dfd8c837c8d250d47a74de8c4c78bc9fb3348ae5b9f44dad38e36390477c8946a0
 EBUILD meld3-0.6.8.ebuild 841 SHA256 9d11c46dd3467989133173d9d6afc31982e0e6b05fcf6c0819b3a4374833246d SHA512 b9ecaa3f4ee90731018c318398606b12a08836f4b76936c821cb10a8f46df606500e31c4f94b7bc5924425bb3b76def3e8aa26b6935de4e7fc3ad5843f8ffe73 WHIRLPOOL 2a031bed2c0b0bf964eacfa6fbfca78453edb65a6f971ec149c80d17b119d485e28e5242500027385ffa95bbe58f809def5d40749b2b5ed6cc6ea98cf439544d
 EBUILD meld3-0.6.9-r1.ebuild 631 SHA256 3e32a1285237c7097918d2ac3b7cc844f366cfb387d6a449844a98202aee3e1b SHA512 f28701aa4d05667cec6ab3e5d504663fb160c3d79d8aaa7c53cf7e0002f0ee91dc45b8aafa7be92e6e67fa10b9fe6ec658a6e0bd5895dc0fcd432301542ceac5 WHIRLPOOL 3c97d79e8860f5d9d1188293b4fcde3a9e8aa3f04bc096eea7b97e02a7101a678f0c9b1881988b8484c4aed739d723f68a302bcc378ff71302a4fd465e71f187
-MISC ChangeLog 2119 SHA256 682a72034dfada715ba1e4d755b02effc89897077905b042ff31522afae9fa38 SHA512 58843cff00a0b4f5437934d8b2d43e3f5e18e273d8fc084064aae7f0463730078163354f894bbb3a9bab2e694634d9809ede2d8e7af87146c325741aeb5da423 WHIRLPOOL e8d0b0c9aced234bd68d942b62519b31e6662b28f668474572ef52f390a04e3a38d255dc1c0660ce3aca6ddce7efd90dac67d062df99289ccaaf90f6b4a96c5a
+EBUILD meld3-1.0.0.ebuild 678 SHA256 3474a4663ece60fedf59484b0f3964084363ad00e0a4392818d122d7f000edec SHA512 b83af4c39175a259d7922982035932308dc03f38e47fae1d204b29c0f0386e685e816ff5e11b98bb5e8def6b2dc0f87983aa6d7922a1e77d46f11f91eddbd279 WHIRLPOOL 394d8e6fd5aec171370ae54f0049011043c82bb74c9f1af6bb0e501f252ad209d598a5537f781f44fc99f5b6c1ced75f9adae123be31e814ae692fa530a340dc
+MISC ChangeLog 2261 SHA256 38213caeb50f43be849e6a9ef2621225188e1404fe9f1fdf711024aa5b6e39e0 SHA512 f1e8d7de929d61238db4c5eafe5f1f7b66674e47f353b9ec865ff42d310c74e3bb8b2c2e34aee11b283c3f6cb46aebdfa48b861db8307f6490c8ce46ed555bf7 WHIRLPOOL d6a877f9afbcfb9cb3ec227e17a4286bf0d01f302840230d0953c2513b3cf2ca799c6539235b58f7f98b15f81791f99028934fd5ec1fcd15f21a66b706e5ff91
 MISC metadata.xml 228 SHA256 14d9f849159e27bfd86eaeb9393f7cf8600844cb0b8a17efdecd0a18db86805f SHA512 59a150d08bac2b3c60c5387fbd72bf4d36b1aa52bf4d0498b0340c67a6a8de3f91822188e751e8b12bf63ddb137ba45c844a126df15f765b4a9971b37cb32385 WHIRLPOOL 09c9328089ec670abadd63d295638951ed83a840e5c4c91b5f8e0d3ea07a454e618923a3b8bd49e9b06ee5315db810e883740f43360b86e8b66cdf66c9626612
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQJ8BAEBCABmBQJTOdgzXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
-ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ2REJCMDdDQzRGMERBRDA2RUEwQUZFNDFC
-MDdBMUFFQUVGQjQ0NjRFAAoJELB6GurvtEZOnSYP/R91AX+nYmW7Vvx+v9Cn9sXW
-JfFYyDX+biyacWMsln78QbtTISo7PIdVhZwcQ+BJjgZx5rMSKOJKOd/KZ283AqRx
-+90gBDgfCzxDxgbXt5+Tdv8FRzUBImUHKIzSMe2Z+pX1edgStovpq3wcmMKCNfJz
-NI6+rIXzG6utBgjCZczb5/99NFwwB+lBiLO3LhULzLaPMw4gDTH6lqWHmFBKJsKE
-PMe2zrF0TZxCdVKdjubyOOS70sjSpIEVCCrczP4F6+HlArug+np+6AhEnEz4ryLj
-yBMHhH7EIYmbS2IwjdFP0YuozpsJFIhIBLyCsLiRkMv8Lb5590711NJjnATkOJN3
-ui1vmavly/YYRR8ZvuRY2e/8P/OnT4IJMq1iWXa1x/MBx3yfbf79tqoD20BSVWml
-8SbWi23yO0MirJJb6OzuL15ifL7Rn5xUIVOLuvrZfuKyEJw/QnsL85KdpfEvRkx6
-Eb/LeAInhh3fmZi9WWgkNUDn8WNkb9lXeFZh3fWMFXOKZgG2dG2Dq3EcxSJP42mc
-0HN+1Chgc9ScnbaUz5xvadp87yWRxnefThodaMuQ6jQ+vSJA2bhFcrw/loGnOX0P
-gqITHALQN6yjgSl4KsrJW+6GsQfnibdDgCeR5Ehy2q5P1jiOofOdln3Piu2HyFT1
-TatT1ahWyZRpSAL4sPZy
-=nL4x
+iEYEAREIAAYFAlNw640ACgkQso7CE7gHKw2EYwCdGPZUkXM3qFl/7VWGOhKZm26A
+a9EAoM5/ztrzApGu2RFwAMGSx1e0O9Tr
+=Pjg+
 -----END PGP SIGNATURE-----
