@@ -1,6 +1,11 @@
 # ChangeLog for dev-python/meld3
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/meld3/ChangeLog,v 1.13 2014/03/31 21:03:45 mgorny Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/meld3/ChangeLog,v 1.14 2014/05/12 15:48:32 idella4 Exp $
+
+*meld3-1.0.0 (12 May 2014)
+
+  12 May 2014; Ian Delaney <idella4@gentoo.org> +meld3-1.0.0.ebuild:
+  bump; drop pypy2_0 py2.6 add py3 support
 
   31 Mar 2014; Michał Górny <mgorny@gentoo.org> meld3-0.6.9-r1.ebuild:
   Add support for the new PyPy slotting.
